# goit-pythonweb-hw-12

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py
docs/source/: conf.py  index.rst  modules.rst
migrations/: env.py
migrations/versions/: 752835ef3901_add_users_and_contact_owner.py  7f1341e018c9_init_contacts.py  e22ea5b53a3a_add_user_roles.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  email.py  limiter.py  redis_cache.py  upload_file.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_repository_contacts.py  test_repository_users.py  test_routes_auth.py  test_routes_contacts.py  test_routes_users.py
